--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,7 +9,7 @@ spring:
 
 eureka:
   instance:
-    hostname: localhost
+    hostname: peer1
   client:
     registerWithEureka: false
     fetchRegistry: false
