--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>com.flashk.cloud</groupId>
 	<artifactId>eureka-server</artifactId>
-	<version>0.1.0</version>
+	<version>0.2.0-SNAPSHOT</version>
 	<name>eureka-server</name>
 	<description>Eureka Server</description>
 	<properties>
